Update README.md
更新说明文档